  * Kura is released as pre-compiled binary installers for the following platforms:
    * Raspberry Pi 2/3/4 based on Raspbian
    * Intel Up Squared board running Ubuntu 18  
    * Intel Up Squared board running Centos 7 (Experimental)
    * Rock960 ARM_64 running Ubuntu 16 (NN version only)
  * Kura is also available as a pre-built Docker container for Centos 7 and Alpine  


Known Issues :
  * The implementation of the CryptoService performs encryption using a
    password that is hardcoded and published.
  * Modem: Ublox Lisa U201 may not be able to establish PPP connection when CHAP/PAP authentication is required.
  * BLE also tested on the Raspberry Pi B with a Broadcom BCM20702 USB dongle and the TI SensorTag. The kernel version was
    "Linux raspberrypi 3.18.11-v7+ #781 SMP PREEMPT Tue Apr 21 18:07:59 BST 2015 armv7l GNU/Linux".
    Note that on the kernel "Linux version 4.1.7-v7+ (dc4@dc4-XPS13-9333) (gcc version 4.8.3 20140303 (prerelease)
    (crosstool-NG linaro-1.13.1+bzr2650 - Linaro GCC 2014.03) ) #817 SMP PREEMPT Sat Sep 19 15:32:00 BST 2015" has a bug on
    gatttool and the BLE connection will encounter a failure.
  * WiFi on Raspberry Pi 2 has only been tested with WiPi WiFi Dongle (Realink RT5370 chipset) and official Pi USB WiFi Dongle (Broadcom BCM43143 chipset).
    AccessPoint WiFi mode not working for Broadcom chipset.
  * Hardware watchdog: not implemented on all platforms
  * Only one WAN interface is currently supported. A warning in displayed
    in the WEB UI if the user attempts to enable more than one WAN interface
  * #3176: Modem interface number management
  * #3005: Kura Gets Stuck in Loading View if Services Clicked Too Fast
  * #2843: Access Banner Content All in One Line
  * #2747: No Spacing Between "Wire Components" and Error in Wire Graph
  * #2728: WireGraph Component Description Windows Too Wide
  * #2725: Different Pop-up Windows for Warnings
  * #2702: Error Message For Long Item Names Not Displayed Properly