@@ -140,6 +140,7 @@ Target Environments:
 
 
 Known Issues :
+  * The intel-up2-centos-7, intel-up2-ubuntu-18 and rock960-ubuntu-16 don't support the Unprivileged Command Service (see #3598)
   * The implementation of the CryptoService performs encryption using a
     password that is hardcoded and published.
   * Modem: Ublox Lisa U201 may not be able to establish PPP connection when CHAP/PAP authentication is required.
